--- a/index.html
+++ b/index.html
@@ -43,10 +43,57 @@
                         </li>
                     </ul>
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item">
+                        <!-- notification -->
+                        <li class="header__navbar-item header__navbar-item--has-noti">
                             <a href="" class="header__navbar-item-link">
                                 <i class="header__navbar-icon fa-solid fa-bell"></i> Notifications
                             </a>
+                            <div class="header__noti">
+                                <header class="header__noti-header">
+                                    <h3>New Notifications</h3>
+                                </header>
+                                <ul class="header__noti-list">
+                                    <li class="header__noti-item header__noti-item--notviewed">
+                                        <a href="" class="header__noti-link">
+                                            <img src="./assets/img/product.jpg" alt="" class="header__noti-img">
+                                            <div class="header__noti-info">
+                                                <span class="header__noti-name">New product you may concern!</span>
+                                                <span class="header__noti-desc">Decsribe new product</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__noti-item header__noti-item--notviewed ">
+                                        <a href="" class="header__noti-link">
+                                            <img src="./assets/img/product2.jpg" alt="" class="header__noti-img">
+                                            <div class="header__noti-info">
+                                                <span class="header__noti-name">You can sell your goods!</span>
+                                                <span class="header__noti-desc">If you have somthings to sell follow us.</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__noti-item ">
+                                        <a href="" class="header__noti-link">
+                                            <img src="./assets/img/product3.jpg" alt="" class="header__noti-img">
+                                            <div class="header__noti-info">
+                                                <span class="header__noti-name">Some home stuffs you may need this month</span>
+                                                <span class="header__noti-desc">Spice, sauce, flour, tissue...</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__noti-item">
+                                        <a href="" class="header__noti-link">
+                                            <img src="./assets/img/product4.jpg" alt="" class="header__noti-img">
+                                            <div class="header__noti-info">
+                                                <span class="header__noti-name">New Apple products have been released!</span>
+                                                <span class="header__noti-desc">iPhone 14 series, iPad 2023, Macbook Pro...</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <footer class="header__noti-footer">
+                                    <a href="" class="header__noti-footer-btn">View all</a>
+                                </footer>
+                            </div>
                         </li>
                         <li class="header__navbar-item">
                             <a href="" class="header__navbar-item-link">
