--- a/index.html
+++ b/index.html
@@ -109,6 +109,51 @@
         <div class="container"></div>
         <footer class="footer"></footer>
     </div>
+    <!-- modal -->
+    <div class="modal">
+        <div class="modal__overlay"></div>
+        <div class="modal__body">
+            <!-- form -->
+            <div class="auth-form">
+                <div class="auth-form__container">
+                    <div class="auth-form__header">
+                        <h3 class="auth-form__heading">Sign up</h3>
+                        <span class="auth-form__switch-btn">Sign in</span>
+                    </div>
+                    <div class="auth-form__form">
+                        <div class="auth-form__group">
+                            <input type="text" class="auth-form__input" placeholder="Your E-mail">
+                        </div>
+                        <div class="auth-form__group">
+                            <input type="text" class="auth-form__input" placeholder="Your password">
+                        </div>
+                        <div class="auth-form__group">
+                            <input type="text" class="auth-form__input" placeholder="Retype your password">
+                        </div>
+                    </div>
+                    <div class="auth-form__aside">
+                        <p class="auth-form__policy-text">
+                            <input type="checkbox" name="" id="box-term"> Do you agree to
+                            <a href="" class="auth-form__policy-link">our terms and privacy policies?</a>
+
+                        </p>
+                    </div>
+                    <div class="auth-form__controls">
+                        <button class="btn">BACK</button>
+                        <button class="btn btn--primary">SIGN UP</button>
+                    </div>
+                </div>
+
+                <div class="auth-form__socials">
+                    <a href="" class="btn btn--with-icon">
+                        <i class="fa-brands fa-square-facebook"></i>Link with Facebook</a>
+                    <a href="" class="btn btn--with-icon">
+                        <i class="fa-brands fa-google"></i>Link with Google </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 
 </html>
