--- a/index.html
+++ b/index.html
@@ -139,16 +139,19 @@
                         </p>
                     </div>
                     <div class="auth-form__controls">
-                        <button class="btn">BACK</button>
+                        <button class="btn btn--normal auth-form__controls-back">BACK</button>
                         <button class="btn btn--primary">SIGN UP</button>
                     </div>
                 </div>
 
                 <div class="auth-form__socials">
-                    <a href="" class="btn btn--with-icon">
-                        <i class="fa-brands fa-square-facebook"></i>Link with Facebook</a>
-                    <a href="" class="btn btn--with-icon">
-                        <i class="fa-brands fa-google"></i>Link with Google </a>
+                    <a href="" class="auth-form__socials--facebook btn btn--size-s btn--with-icon">
+                        <i class="auth-form__socials-icon fa-brands fa-square-facebook"></i>
+                        <span class="auth-form__socials-title">Link with Facebook</span>
+                    </a>
+                    <a href="" class="auth-form__socials--google btn btn--size-s  btn--with-icon">
+                        <i class="auth-form__socials-icon fa-brands fa-google"></i>
+                        <span class="auth-form__socials-title">Link with Google</span> </a>
                 </div>
             </div>
         </div>
